docs/alphaindexes/5.0.x/modstatistics.md
# Modules Statistics

([0](#0)) ([1](#1)) ([2](#2)) ([3](#3)) ([4](#4)) ([5](#5)) ([6](#6))
([7](#7)) ([8](#8)) ([9](#9)) ([A](#a)) ([B](#b)) ([C](#c)) ([D](#d))
([E](#e)) ([F](#f)) ([G](#g)) ([H](#h)) ([I](#i)) ([J](#j)) ([K](#k))
([L](#l)) ([M](#m)) ([N](#n)) ([O](#o)) ([P](#p)) ([Q](#q)) ([R](#r))
([S](#s)) ([T](#t)) ([U](#u)) ([V](#v)) ([W](#w)) ([X](#x)) ([Y](#y))
([Z](#z))

## \[0\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[1\]

| Name            | Module Path   | Module Name                                                                               |
|-----------------|---------------|-------------------------------------------------------------------------------------------|
| **1xx_replies** | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.1xx_replies) |

## \[2\]

| Name                 | Module Path   | Module Name                                                                               |
|----------------------|---------------|-------------------------------------------------------------------------------------------|
| **200_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.200_replies) |
| **202_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.202_replies) |
| **2xx_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.2xx_replies) |
| **2xx_transactions** | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                    |

## \[3\]

| Name                 | Module Path   | Module Name                                                                               |
|----------------------|---------------|-------------------------------------------------------------------------------------------|
| **300_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.300_replies) |
| **301_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.301_replies) |
| **302_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.302_replies) |
| **3xx_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.3xx_replies) |
| **3xx_transactions** | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                    |

## \[4\]

| Name                 | Module Path   | Module Name                                                                               |
|----------------------|---------------|-------------------------------------------------------------------------------------------|
| **400_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.400_replies) |
| **401_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.401_replies) |
| **403_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.403_replies) |
| **404_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.404_replies) |
| **407_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.407_replies) |
| **408_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.408_replies) |
| **483_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.483_replies) |
| **4xx_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.4xx_replies) |
| **4xx_transactions** | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                    |

## \[5\]

| Name                 | Module Path   | Module Name                                                                               |
|----------------------|---------------|-------------------------------------------------------------------------------------------|
| **500_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.500_replies) |
| **5xx_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.5xx_replies) |
| **5xx_transactions** | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                    |

## \[6\]

| Name                 | Module Path   | Module Name                                                                               |
|----------------------|---------------|-------------------------------------------------------------------------------------------|
| **6xx_replies**      | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.6xx_replies) |
| **6xx_transactions** | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                    |

## \[7\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[8\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[9\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[A\]

| Name                                                  | Module Path   | Module Name                                                                        |
|-------------------------------------------------------|---------------|------------------------------------------------------------------------------------|
| **AAR Timeouts (aar_timeouts)**                       | *src/modules* | [ims_qos](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_qos.html)     |
| **accepted_regs**                                     | *src/modules* | [registrar](http://www.kamailio.org/docs/modules/5.0.x/src/modules/registrar.html) |
| **active_dialogs**                                    | *src/modules* | [dialog](http://www.kamailio.org/docs/modules/5.0.x/src/modules/dialog.html)       |
| **active_rooms**                                      | *src/modules* | [imc](http://www.kamailio.org/docs/modules/5.0.x/src/modules/imc.html)             |
| **active_transactions**                               | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)             |
| **added_branches**                                    | *src/modules* | [tsilo](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tsilo.html)         |
| **Average AAR Response Time (aar_avg_response_time)** | *src/modules* | [ims_qos](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_qos.html)     |
| **Average LIR Response Time (lir_avg_response_time)** | *src/modules* | [ims_icscf](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_icscf.html) |
| **Average MAR Response Time (mar_avg_response_time)** | *src/modules* | [ims_auth](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_auth.html)   |
| **Average UAR Response Time (uar_avg_response_time)** | *src/modules* | [ims_icscf](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_icscf.html) |

## \[B\]

| Name                             | Module Path   | Module Name                                                                              |
|----------------------------------|---------------|------------------------------------------------------------------------------------------|
| **Billed seconds (billed_secs)** | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html) |

## \[C\]

| Name                                                         | Module Path   | Module Name                                                                                    |
|--------------------------------------------------------------|---------------|------------------------------------------------------------------------------------------------|
| **CCRs average response time (ccr_avg_response_time)**       | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html)       |
| **CCRs requests, which ended with a timeout (ccr_timeouts)** | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html)       |
| **CCRs responses time (ccr_responses_time)**                 | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html)       |
| **contacts**                                                 | *src/modules* | [usrloc](http://www.kamailio.org/docs/modules/5.0.x/src/modules/usrloc.html#usrloc.s.contacts) |

## \[D\]

| Name                 | Module Path   | Module Name                                                                                |
|----------------------|---------------|--------------------------------------------------------------------------------------------|
| **defaults_expires** | *src/modules* | [registrar](http://www.kamailio.org/docs/modules/5.0.x/src/modules/registrar.html)         |
| **dialog_endpoints** | *src/modules* | [nat_traversal](http://www.kamailio.org/docs/modules/5.0.x/src/modules/nat_traversal.html) |
| **dumped_messages**  | *src/modules* | [msilo](http://www.kamailio.org/docs/modules/5.0.x/src/modules/msilo.html)                 |
| **dumped_reminders** | *src/modules* | [msilo](http://www.kamailio.org/docs/modules/5.0.x/src/modules/msilo.html)                 |

## \[E\]

| Name                 | Module Path   | Module Name                                                                                            |
|----------------------|---------------|--------------------------------------------------------------------------------------------------------|
| **early_dialogs**    | *src/modules* | [dialog](http://www.kamailio.org/docs/modules/5.0.x/src/modules/dialog.html)                           |
| **errors**           | *src/modules* | [http_async_client](http://www.kamailio.org/docs/modules/5.0.x/src/modules/http_async_client.html)     |
| **expired contacts** | *src/modules* | [ims_registrar_scscf](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_registrar_scscf.html) |
| **expired contacts** | *src/modules* | [ims_usrloc_pcscf](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_usrloc_pcscf.html)       |
| **expired_dialogs**  | *src/modules* | [dialog](http://www.kamailio.org/docs/modules/5.0.x/src/modules/dialog.html)                           |
| **expired_sst**      | *src/modules* | [sst](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sst.html)                                 |
| **expires**          | *src/modules* | [usrloc](http://www.kamailio.org/docs/modules/5.0.x/src/modules/usrloc.html#usrloc.s.expires)          |

## \[F\]

| Name                                          | Module Path   | Module Name                                                                              |
|-----------------------------------------------|---------------|------------------------------------------------------------------------------------------|
| **Failed final CCRs (failed_final_ccrs)**     | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html) |
| **Failed initial CCRs (failed_initial_ccrs)** | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html) |
| **Failed interim CCRs (failed_interim_ccrs)** | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html) |
| **failed_dialogs**                            | *src/modules* | [dialog](http://www.kamailio.org/docs/modules/5.0.x/src/modules/dialog.html)             |
| **failed_messages**                           | *src/modules* | [msilo](http://www.kamailio.org/docs/modules/5.0.x/src/modules/msilo.html)               |
| **failed_reminders**                          | *src/modules* | [msilo](http://www.kamailio.org/docs/modules/5.0.x/src/modules/msilo.html)               |
| **failures**                                  | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.failures)   |
| **Final CCRs (final_ccrs)**                   | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html) |

## \[G\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[H\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[I\]

| Name                            | Module Path   | Module Name                                                                                            |
|---------------------------------|---------------|--------------------------------------------------------------------------------------------------------|
| **impus**                       | *src/modules* | [ims_registrar_scscf](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_registrar_scscf.html) |
| **impus**                       | *src/modules* | [ims_usrloc_pcscf](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_usrloc_pcscf.html)       |
| **Initial CCRs (initial_ccrs)** | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html)               |
| **Interim CCRs (interim_ccrs)** | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html)               |
| **inuse_transactions**          | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                                 |

## \[J\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[K\]

| Name                            | Module Path   | Module Name                                                                                |
|---------------------------------|---------------|--------------------------------------------------------------------------------------------|
| **keepalive_endpoints**         | *src/modules* | [nat_traversal](http://www.kamailio.org/docs/modules/5.0.x/src/modules/nat_traversal.html) |
| **Killed calls (killed_calls)** | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html)   |

## \[L\]

| Name                            | Module Path   | Module Name                                                                        |
|---------------------------------|---------------|------------------------------------------------------------------------------------|
| **LIR Timeouts (lir_timeouts)** | *src/modules* | [ims_icscf](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_icscf.html) |

## \[M\]

| Name                            | Module Path   | Module Name                                                                        |
|---------------------------------|---------------|------------------------------------------------------------------------------------|
| **MAR Timeouts (mar_timeouts)** | *src/modules* | [ims_auth](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_auth.html)   |
| **max_contacts**                | *src/modules* | [registrar](http://www.kamailio.org/docs/modules/5.0.x/src/modules/registrar.html) |
| **max_expires**                 | *src/modules* | [registrar](http://www.kamailio.org/docs/modules/5.0.x/src/modules/registrar.html) |

## \[N\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[O\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[P\]

| Name                  | Module Path   | Module Name                                                                  |
|-----------------------|---------------|------------------------------------------------------------------------------|
| **processed_dialogs** | *src/modules* | [dialog](http://www.kamailio.org/docs/modules/5.0.x/src/modules/dialog.html) |

## \[Q\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[R\]

| Name                     | Module Path   | Module Name                                                                                            |
|--------------------------|---------------|--------------------------------------------------------------------------------------------------------|
| **received_ACKs**        | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.received_acks)            |
| **registered contacts**  | *src/modules* | [ims_registrar_scscf](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_registrar_scscf.html) |
| **registered contacts**  | *src/modules* | [ims_usrloc_pcscf](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_usrloc_pcscf.html)       |
| **registered_endpoints** | *src/modules* | [nat_traversal](http://www.kamailio.org/docs/modules/5.0.x/src/modules/nat_traversal.html)             |
| **registered_users**     | *src/modules* | [usrloc](http://www.kamailio.org/docs/modules/5.0.x/src/modules/usrloc.html#usrloc.s.registered_users) |
| **rejected_regs**        | *src/modules* | [registrar](http://www.kamailio.org/docs/modules/5.0.x/src/modules/registrar.html)                     |
| **replies**              | *src/modules* | [http_async_client](http://www.kamailio.org/docs/modules/5.0.x/src/modules/http_async_client.html)     |
| **requests**             | *src/modules* | [http_async_client](http://www.kamailio.org/docs/modules/5.0.x/src/modules/http_async_client.html)     |
| **rpl_absorbed**         | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                                 |
| **rpl_generated**        | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                                 |
| **rpl_received**         | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                                 |
| **rpl_relayed**          | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                                 |
| **rpl_sent**             | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                                 |

## \[S\]

| Name                                                 | Module Path   | Module Name                                                                                    |
|------------------------------------------------------|---------------|------------------------------------------------------------------------------------------------|
| **sent_err_replies**                                 | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.sent_err_replies) |
| **sent_replies**                                     | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.sent_replies)     |
| **stored_messages**                                  | *src/modules* | [msilo](http://www.kamailio.org/docs/modules/5.0.x/src/modules/msilo.html)                     |
| **stored_ruris**                                     | *src/modules* | [tsilo](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tsilo.html)                     |
| **stored_transactions**                              | *src/modules* | [tsilo](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tsilo.html)                     |
| **subscribed_endpoints**                             | *src/modules* | [nat_traversal](http://www.kamailio.org/docs/modules/5.0.x/src/modules/nat_traversal.html)     |
| **Sucessful final CCRs (successful_final_ccrs)**     | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html)       |
| **Sucessful initial CCRs (successful_initial_ccrs)** | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html)       |
| **Sucessful interim CCRs (successful_interim_ccrs)** | *src/modules* | [ims_charging](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_charging.html)       |

## \[T\]

| Name                   | Module Path   | Module Name                                                                                        |
|------------------------|---------------|----------------------------------------------------------------------------------------------------|
| **timeouts**           | *src/modules* | [http_async_client](http://www.kamailio.org/docs/modules/5.0.x/src/modules/http_async_client.html) |
| **total_ruris**        | *src/modules* | [tsilo](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tsilo.html)                         |
| **total_transactions** | *src/modules* | [tsilo](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tsilo.html)                         |

## \[U\]

| Name                            | Module Path   | Module Name                                                                                 |
|---------------------------------|---------------|---------------------------------------------------------------------------------------------|
| **UAC_transactions**            | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                      |
| **UAR Timeouts (uar_timeouts)** | *src/modules* | [ims_icscf](http://www.kamailio.org/docs/modules/5.0.x/src/modules/ims_icscf.html)          |
| **UAS_transactions**            | *src/modules* | [tmx](http://www.kamailio.org/docs/modules/5.0.x/src/modules/tmx.html)                      |
| **users**                       | *src/modules* | [usrloc](http://www.kamailio.org/docs/modules/5.0.x/src/modules/usrloc.html#usrloc.s.users) |

## \[V\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[W\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[X\]

| Name            | Module Path   | Module Name                                                                               |
|-----------------|---------------|-------------------------------------------------------------------------------------------|
| **xxx_replies** | *src/modules* | [sl](http://www.kamailio.org/docs/modules/5.0.x/src/modules/sl.html#sl.stats.xxx_replies) |

## \[Y\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[Z\]

| Name | Module Path | Module Name |
|------|-------------|-------------|
